fix: Hide horizontal scrolls only when animating horizontally
When animations are performed my modifying the margins and paddings
in the horizontal direction, the scrollbars appear momentarily. This
is a bad user experience.

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,6 @@ body {
     background: url(../images/paper_background.jpg);
     background-repeat: repeat;
     margin : 0px;
-    overflow-x: hidden;
 }
 
 #banner {
